--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     const constraints = {
         audio: false,
         video: {
-            facingMode: "environment"
+            facingMode: "user"
         }
     };
 
