--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 
 <body>
     <div class="wrap">
-        <div id="app"></div>
+        <div id="basic" style="text-align:center;">
+            <video class="videostream" autoplay="" playsinline></video>
+            <!--   <audio class="audiostream" autoplay=""></audio> -->
+            <p>
+                <button class="capture-button">Capture</button>
+                <button id="stop-button">Stop</button>
+            </p>
+        </div>
         <div class="container">
             <img class="imgfn" src="./img/動物角色_VR_企鵝.png" alt="">
             <img class="imgfn" src="./img/動物角色_VR_烏龜.png" alt="">
@@ -43,63 +50,44 @@
 </style>
 <script>
 
+    (function () {
 
-    const constraints = {
-        audio: false,
-        video: {
-            facingMode: "user"
-        }
-    };
+        const video = document.querySelector('#basic video');
+        const audio = document.querySelector('#basic audio');
 
-    const getFrameFromVideo = (video, canvas) => {
-        const ctx = canvas.getContext("2d");
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        ctx.save();
-        ctx.translate(video.width, 0);
-        ctx.scale(-1, 1);
-        ctx.drawImage(video, 0, 0, video.width, video.height);
-        ctx.restore();
-        requestAnimationFrame(() => getFrameFromVideo(video, canvas));
-    };
+        const captureVideoButton = document.querySelector('#basic .capture-button');
+        const stopVideoButton = document.querySelector('#basic #stop-button');
 
-    const getCameraStream = video => {
-        navigator.mediaDevices
-            .getUserMedia(constraints)
-            .then(function success(stream) {
-                video.srcObject = stream;
-            });
-    };
+        //Capture Video
+        captureVideoButton.onclick = function () {
+            navigator.mediaDevices.getUserMedia({
+                audio: false,
+                video: true
+            })
+                .then(stream => {
+                    console.log(stream);
+                    window.localStream = stream;
+                    video.srcObject = stream;
+                    audio.srcObject = stream;
+                })
+                .catch((err) => {
+                    console.log(err);
+                });
+        };
 
-    const createVideo = (id, width, height) => {
-        const video = document.createElement("video");
-        video.id = id;
-        video.width = 200;
-        video.height = 200;
-        video.autoplay = true;
-        //  video.controls = true;
-        return video;
-    };
+        stopVideoButton.onclick = function () {
+            // localStream.getTracks.forEach((track) => {
+            //   if (track) {
+            //     track.stop();
+            //   }
+            // });
+            localStream.getVideoTracks()[0].stop();
+            // video.src = '';
 
-    const createCanvas = (id, width, height) => {
-        const canvas = document.createElement("canvas");
-        canvas.id = id;
-        canvas.width = width;
-        canvas.height = height;
-        return canvas;
-    };
-
-    const init = () => {
-        const video = createVideo("vid", 480, 360);
-        const canvas = createCanvas("canvas", 200, 200);
-        const app = document.getElementById("app");
-        getCameraStream(video);
-        // getFrameFromVideo(video, canvas);
-        app.appendChild(video);
-        // app.appendChild(canvas);
-        console.log("init");
-    };
-
-    document.getElementById("app").onload = init();
+            localStream.getAudioTracks()[0].stop();
+            // audio.src = '';
+        };
+    })();
 </script>
 
 </html>
