--- a/index.html
+++ b/index.html
@@ -10,20 +10,13 @@
 
 <body>
     <div class="wrap">
-        <div id="basic" style="text-align:center;">
-            <video class="videostream" autoplay="" playsinline></video>
-            <!--   <audio class="audiostream" autoplay=""></audio> -->
-            <p>
-                <button class="capture-button">Capture</button>
-                <button id="stop-button">Stop</button>
-            </p>
-        </div>
+        <div id="app"></div>
         <div class="container">
             <img class="imgfn" src="./img/動物角色_VR_企鵝.png" alt="">
             <img class="imgfn" src="./img/動物角色_VR_烏龜.png" alt="">
             <img class="imgfn" src="./img/動物角色_VR_鯨魚.png" alt="">
         </div>
-        <img class="imgfn" src="./img/1791174.png" alt="">
+        <img class="imgfn" src="./img/1791174.png" alt="" onclick="test()">
     </div>
 </body>
 <style>
@@ -48,66 +41,74 @@
         justify-content: center;
     }
 
-    .videostream {
-        width: 200px;
-        height: 200px;
-    }
-
-    video::-webkit-media-controls,
-    video::-moz-media-controls,
-    video::-webkit-media-controls-enclosure {
-        display: none !important;
-    }
-
-    video::-webkit-media-controls-panel,
-    video::-webkit-media-controls-panel-container,
-    video::-webkit-media-controls-start-playback-button {
-        display: none !important;
-        -webkit-appearance: none;
+    video {
+        display: none;
     }
 </style>
 <script>
+    let videos;
 
-    (function () {
+    const constraints = {
+        audio: false,
+        video: {
+            facingMode: "environment"
+        }
+    };
 
-        const video = document.querySelector('#basic video');
+    const getFrameFromVideo = (video, canvas) => {
+        const ctx = canvas.getContext("2d");
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        ctx.save();
+        ctx.translate(video.width, 0);
+        ctx.scale(-1, 1);
+        ctx.drawImage(video, 0, 0, video.width, video.height);
+        ctx.restore();
+        requestAnimationFrame(() => getFrameFromVideo(video, canvas));
+    };
 
-        video.controls = false;
-        const audio = document.querySelector('#basic audio');
+    const getCameraStream = video => {
+        navigator.mediaDevices
+            .getUserMedia(constraints)
+            .then(function success(stream) {
+                video.srcObject = stream;
+            });
+    };
 
-        const captureVideoButton = document.querySelector('#basic .capture-button');
-        const stopVideoButton = document.querySelector('#basic #stop-button');
+    const createVideo = (id, width, height) => {
+        videos = document.createElement("video");
+        videos.id = id;
+        videos.width = 200;
+        videos.height = 200;
+        // video.autoplay = true;
 
-        //Capture Video
-        captureVideoButton.onclick = function () {
-            navigator.mediaDevices.getUserMedia({
-                audio: false,
-                video: true
-            })
-                .then(stream => {
-                    console.log(stream);
-                    window.localStream = stream;
-                    video.srcObject = stream;
-                    audio.srcObject = stream;
-                })
-                .catch((err) => {
-                    console.log(err);
-                });
-        };
+        //  video.controls = true;
+        return videos;
+    };
 
-        stopVideoButton.onclick = function () {
-            // localStream.getTracks.forEach((track) => {
-            //   if (track) {
-            //     track.stop();
-            //   }
-            // });
-            localStream.getVideoTracks()[0].stop();
-            // video.src = '';
+    const createCanvas = (id, width, height) => {
+        const canvas = document.createElement("canvas");
+        canvas.id = id;
+        canvas.width = width;
+        canvas.height = height;
+        return canvas;
+    };
 
-            localStream.getAudioTracks()[0].stop();
-            // audio.src = '';
-        };
-    })();
+    const init = () => {
+        const video = createVideo("vid", 200, 200);
+        const canvas = createCanvas("canvas", 200, 200);
+        const app = document.getElementById("app");
+        getCameraStream(video);
+        getFrameFromVideo(video, canvas);
+        app.appendChild(video);
+        app.appendChild(canvas);
+        console.log("init");
+    };
+
+    document.getElementById("app").onload = init();
+
+    function test() {
+        videos.play();
+    }
 </script>
 
 </html>
