--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             <img class="imgfn" src="./img/動物角色_VR_烏龜.png" alt="">
             <img class="imgfn" src="./img/動物角色_VR_鯨魚.png" alt="">
         </div>
-        <img class="imgfn" src="./img/1791174.png" alt="" onclick="test()">
+        <div>
+            <img id="opencam" class="imgbt" src="./img/1791174.png" alt="" onclick="test()">
+            <img id="capture" class="imgbt" src="./img/capture.png" alt="" onclick="startcapture()" style="display:none">
+        </div>
     </div>
 </body>
 <style>
@@ -24,6 +27,12 @@
 
         width: 100px;
         height: 100px;
+    }
+
+    .imgbt {
+
+        width: 80px;
+        height: 80px;
     }
 
     .wrap {
@@ -44,71 +53,86 @@
     video {
         display: none;
     }
+
+    #app {
+        height: 70vh;
+        display: flex;
+        align-items: flex-end;
+    }
 </style>
 <script>
-    let videos;
 
-    const constraints = {
-        audio: false,
-        video: {
-            facingMode: "environment"
-        }
-    };
-
-    const getFrameFromVideo = (video, canvas) => {
-        const ctx = canvas.getContext("2d");
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        ctx.save();
-        ctx.translate(video.width, 0);
-        ctx.scale(-1, 1);
-        ctx.drawImage(video, 0, 0, video.width, video.height);
-        ctx.restore();
-        requestAnimationFrame(() => getFrameFromVideo(video, canvas));
-    };
-
-    const getCameraStream = video => {
-        navigator.mediaDevices
-            .getUserMedia(constraints)
-            .then(function success(stream) {
-                video.srcObject = stream;
-            });
-    };
-
-    const createVideo = (id, width, height) => {
-        videos = document.createElement("video");
-        videos.setAttribute("playsinline", "");
-        videos.id = id;
-        videos.width = 200;
-        videos.height = 200;
-        // video.autoplay = true;
-
-        //  video.controls = true;
-        return videos;
-    };
-
-    const createCanvas = (id, width, height) => {
-        const canvas = document.createElement("canvas");
-        canvas.id = id;
-        canvas.width = width;
-        canvas.height = height;
-        return canvas;
-    };
-
-    const init = () => {
-        const video = createVideo("vid", 200, 200);
-        const canvas = createCanvas("canvas", 200, 200);
-        const app = document.getElementById("app");
-        getCameraStream(video);
-        getFrameFromVideo(video, canvas);
-        app.appendChild(video);
-        app.appendChild(canvas);
-        console.log("init");
-    };
-
-    document.getElementById("app").onload = init();
-
+    let videos = null;
     function test() {
+
+        if (videos == null) {
+
+
+            const constraints = {
+                audio: false,
+                video: {
+                    facingMode: "user"
+                }
+            };
+
+            const getFrameFromVideo = (video, canvas) => {
+                const ctx = canvas.getContext("2d");
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                ctx.save();
+                ctx.translate(video.width, 0);
+                ctx.scale(-1, 1);
+                ctx.drawImage(video, 0, 0, video.width, video.height);
+                ctx.restore();
+                requestAnimationFrame(() => getFrameFromVideo(video, canvas));
+            };
+
+            const getCameraStream = video => {
+                navigator.mediaDevices
+                    .getUserMedia(constraints)
+                    .then(function success(stream) {
+                        video.srcObject = stream;
+                    });
+            };
+
+            const createVideo = (id, width, height) => {
+                videos = document.createElement("video");
+                videos.setAttribute("playsinline", "");
+                videos.id = id;
+                videos.width = 200;
+                videos.height = 200;
+                // video.autoplay = true;
+
+                //  video.controls = true;
+                return videos;
+            };
+
+            const createCanvas = (id, width, height) => {
+                const canvas = document.createElement("canvas");
+                canvas.id = id;
+                canvas.width = width;
+                canvas.height = height;
+                return canvas;
+            };
+
+            const init = () => {
+                const video = createVideo("vid", 200, 200);
+                const canvas = createCanvas("canvas", 200, 200);
+                const app = document.getElementById("app");
+                getCameraStream(video);
+                getFrameFromVideo(video, canvas);
+                app.appendChild(video);
+                app.appendChild(canvas);
+                console.log("init");
+            };
+
+            document.getElementById("app").onload = init();
+        }
         videos.play();
+        document.querySelector("#opencam").style.display = "none";
+        document.querySelector("#capture").style.display = "block";
+    }
+    function startcapture() {
+
     }
 </script>
 
