--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-
+    <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
@@ -147,16 +146,6 @@
     html,
     body {
         touch-action: manipulation;
-    }
-
-    @keyframes example {
-        from {
-            background-color: red;
-        }
-
-        to {
-            background-color: yellow;
-        }
     }
 
     @media screen and (min-width: 600px) {
