--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" id="viewport" name="viewport">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <script src="https://superal.github.io/canvas2image/canvas2image.js"></script>
+    <script src="./js/canvas2image.js"></script>
+    <script src="./js/html2canvas.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 
 <body>
@@ -35,309 +36,6 @@
 
 
 </body>
-<style>
-    .mainwrap {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .imgfn {
-
-        transition: transform 0.5s;
-
-        width: 33%;
-        height: 100px;
-    }
-
-
-    .adddown {
-        transform: translateY(10px);
-    }
-
-    .imgfns {
-        width: 33%;
-        height: 100px;
-        transition: transform 0.5s;
-    }
-
-    .btwrap {
-
-        width: 100%;
-        text-align: center;
-        padding: 5px;
-    }
-
-    .imgbt {
-
-        width: 60px;
-        height: 60px;
-    }
-
-    .wrap {
-        width: 100%;
-
-        display: flex;
-        align-items: center;
-
-        flex-direction: column;
-
-    }
-
-    .wraprotate {
-        flex-direction: row-reverse;
-
-    }
-
-    .container {
-        display: flex;
-        justify-content: center;
-
-    }
-
-    video {
-        display: none;
-    }
-
-    #app {
-        height: 50vh;
-        padding-top: 80px;
-        display: flex;
-        justify-content: center;
-    }
-
-    #textfn {
-        font-size: 7rem;
-        position: fixed;
-        display: none;
-        color: #060681;
-        background-color: rgb(0 0 0 / 62%);
-        width: 100%;
-        height: 100vh;
-        top: 0;
-        left: 0;
-        justify-content: center;
-        align-items: center;
-    }
-
-    #downloadimg {
-        margin: 0 auto;
-        display: none;
-        padding: 10px;
-    }
-
-    #save {
-        width: 100% !important;
-        height: 80vh !important;
-    }
-
-    #rotation {
-        position: absolute;
-        right: 30px;
-    }
-
-    .mainwrap {
-        position: relative;
-    }
-
-    #downloadwrap {
-        flex-direction: column;
-    }
-
-    html,
-    body {
-        touch-action: manipulation;
-    }
-
-    @media screen and (min-width: 600px) {
-        .imgfn {
-
-            width: 80px;
-            height: 100px;
-        }
-
-        .btwrap {
-            width: 100%;
-            text-align: right;
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            right: 5px;
-        }
-
-        .imgfns {
-
-            width: 92px;
-            height: 100px;
-        }
-
-        #opencam {
-            transform: rotate(-90deg);
-        }
-
-        #app {
-            padding-top: 10px;
-            height: 60vh;
-        }
-
-        .wrap {
-            height: 95vh;
-        }
-
-        #downloadwrap {
-            justify-content: center;
-            align-items: center;
-            flex-direction: row;
-            height: 100vh;
-            padding: 0 10px;
-        }
-    }
-</style>
-<script>
-
-    let straighth = 300;
-    let straightw = 250;
-
-    let Horizontalh = 250;
-    let Horizontalw = 600;
-    let videos = null;
-    function test() {
-
-        if (videos == null) {
-
-
-            const constraints = {
-                audio: false,
-                video: {
-                    facingMode: "user"
-                }
-            };
-
-            const getFrameFromVideo = (video, canvas) => {
-                const ctx = canvas.getContext("2d");
-                ctx.clearRect(0, 0, canvas.width, canvas.height);
-                ctx.save();
-                ctx.translate(video.width, 0);
-                ctx.scale(-1, 1);
-                ctx.drawImage(video, 0, 0, video.width, video.height);
-                ctx.restore();
-                requestAnimationFrame(() => getFrameFromVideo(video, canvas));
-            };
-
-            const getCameraStream = video => {
-                navigator.mediaDevices
-                    .getUserMedia(constraints)
-                    .then(function success(stream) {
-                        video.srcObject = stream;
-                    });
-            };
-
-            const createVideo = (id, width, height) => {
-                videos = document.createElement("video");
-                videos.setAttribute("playsinline", "");
-                videos.id = id;
-                videos.width = width;
-                videos.height = height;
-                return videos;
-            };
-
-            const createCanvas = (id, width, height) => {
-                const canvas = document.createElement("canvas");
-                canvas.id = id;
-                canvas.width = width;
-                canvas.height = height;
-                return canvas;
-            };
-
-            const init = () => {
-                let h = straighth;
-                let w = straightw;
-                if (window.screen.availWidth > 600) {
-                    h = Horizontalh;
-                    w = Horizontalw;
-                }
-                const video = createVideo("vid", w, h);
-                const canvas = createCanvas("canvas", w, h);
-                const app = document.getElementById("app");
-                getCameraStream(video);
-                getFrameFromVideo(video, canvas);
-                app.appendChild(video);
-                app.appendChild(canvas);
-                console.log("init ");
-            };
-
-            document.getElementById("app").onload = init();
-        }
-        videos.play();
-        document.querySelector("#opencam").style.display = "none";
-        document.querySelector("#capture").style.display = "inline";
-    }
-    function startcapture() {
-        document.querySelector("#capture").style.display = "none";
-        document.querySelector("#textfn").style.display = "flex";
-        let i = 3;
-
-        let dp = function () {
-            document.querySelector("#textfn").innerText = " " + i;
-            setTimeout(function () {
-                i -= 1;
-                if (i != 0) {
-
-                    dp();
-                }
-                else {
-                    html2canvas(document.querySelector("#go")).then(canvas => {
-                        canvas.id = "save";
-                        document.querySelector("#downloadwrap").prepend(canvas);
-
-                        document.querySelector("#downloadimg").style.display = "block";
-                        console.log(canvas);
-                    });
-                    document.querySelector("#go").style.display = "none";
-                    document.querySelector("#textfn").style.display = "none";
-                    document.querySelector("#downloadwrap").style.display = "flex";
-                }
-            }, 1000);
-        }
-        dp();
-
-
-    }
-
-    function download() {
-        let image = document.querySelector("#save");
-        Canvas2Image.saveAsPNG(image);
-    }
-    window.onresize = function () {
-        if (document.documentElement.clientWidth  > 600) {
-            if (document.querySelector("#canvas") != null) {
-                document.querySelector("#canvas").setAttribute("width", Horizontalw);
-                document.querySelector("#vid").setAttribute("width", Horizontalw);
-
-                document.querySelector("#canvas").setAttribute("height", Horizontalh);
-                document.querySelector("#vid").setAttribute("height", Horizontalh);
-            }
-
-        } else {
-            if (document.querySelector("#canvas") != null) {
-                document.querySelector("#canvas").setAttribute("width", straightw);
-                document.querySelector("#vid").setAttribute("width", straightw);
-            }
-
-        }
-
-
-
-    }
-
-
-
-    
-    window.onload = function () {
-        document.querySelectorAll(".imgtrans").forEach(e => {
-            e.classList.add("adddown");
-        })
-    }
-
-</script>
+<script src="./js/main.js"></script>
 
 </html>
