--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
     <div class="mainwrap">
         <div class="wrap" id="go">
-            <div id="app"></div>
-            <div class="container">
-                <img class="imgfn imgtrans" src="./img/動物角色_VR_企鵝.png" alt="">
-                <img class="imgfn imgtrans" src="./img/動物角色_VR_烏龜.png" alt="">
-                <img class="imgfns imgtrans" src="./img/動物角色_VR_鯨魚.png" alt="">
-            </div>
-
+            <div id="app">
+                <div class="imgcontent">
+                    <img class="penguin imgfn imgtrans" src="./img/動物角色_VR_企鵝.png" alt="">
+                    <img class="turtle imgfn imgtrans" src="./img/動物角色_VR_烏龜.png" alt="">
+                    <img class="imgfns imgfn imgtrans" src="./img/動物角色_VR_鯨魚.png" alt="">
+                </div>         
+        </div>
         </div>
         <div class="btwrap">
             <img id="opencam" class="imgbt" src="./img/1791174.png" alt="" onclick="test()">
