--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                     <img class="penguin imgfn imgtrans" src="./img/動物角色_VR_企鵝.png" alt="">
                     <img class="turtle imgfn imgtrans" src="./img/動物角色_VR_烏龜.png" alt="">
                     <img class="imgfns imgfn imgtrans" src="./img/動物角色_VR_鯨魚.png" alt="">
+                    
                 </div>         
+                <img style="width: 100%;height: 100vh;position: absolute;" src="./img/imgs.png" alt="">
         </div>
         </div>
         <div class="btwrap">
