--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img class="imgfns imgfn imgtrans" src="./img/動物角色_VR_鯨魚.png" alt="">
                     
                 </div>         
-                <img style="width: 100%;height: 100vh;position: absolute;" src="./img/imgs.png" alt="">
+                <img id="background" style="position: absolute;" src="./img/imgs.png" alt="">
         </div>
         </div>
         <div class="btwrap">
