--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 
-<body>
+<body id="load" style="display: none;">
     <div class="mainwrap">
         <div class="wrap" id="go">
             <div id="app">
