--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img class="imgfns imgfn imgtrans" src="./img/動物角色_VR_鯨魚.png" alt="">
                     
                 </div>         
-                <img id="background" style="position: absolute;" src="./img/imgs.png" alt="">
+                <img id="background" style="position: absolute;display: none;" src="./img/imgs.png" alt="">
                 <div class="btwrap">
                     <img id="opencam" class="imgbt" src="./img/1791174.png" alt="" onclick="test()">
                     <img id="capture" class="imgbt" src="./img/capture.png" alt="" onclick="startcapture()"
