--- a/index.html
+++ b/index.html
@@ -19,18 +19,17 @@
                     <img class="penguin imgfn imgtrans" src="./img/動物角色_VR_企鵝.png" alt="">
                     <img class="turtle imgfn imgtrans" src="./img/動物角色_VR_烏龜.png" alt="">
                     <img class="imgfns imgfn imgtrans" src="./img/動物角色_VR_鯨魚.png" alt="">
-                    
-                </div>         
+
+                </div>
                 <img id="background" style="position: absolute;display: none;" src="./img/imgs.png" alt="">
                 <div class="btwrap">
                     <img id="opencam" class="imgbt" src="./img/1791174.png" alt="" onclick="test()">
-                    <img id="capture" class="imgbt" src="./img/capture.png" alt="" onclick="startcapture()"
-                        style="display:none">
+                    <img id="capture" class="imgbt" src="./img/capture.png" alt="" onclick="startcapture()" style="display:none">
                 </div>
-              <canvas id="canvas"></canvas>
+                <canvas id="canvas"></canvas>
+            </div>
         </div>
-        </div>
-       
+
     </div>
     <div id="downloadwrap" style="display: none;">
         <img id="downloadimg" class="imgbt" src="./img/downloading.png" onclick="download() " class="mid">
