--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body id="load" style="display: none;">
     <div class="mainwrap">
-        <div class="wrap" id="go">
+        <div class="wrap" id="go" style="display: flex;justify-content: center;align-items: center;">
             <div id="app">
                 <div class="imgcontent">
                     <img class="penguin imgfn imgtrans" src="./img/動物角色_VR_企鵝.png" alt="">
