--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <div class="wrap" id="go" style="display: flex;justify-content: center;align-items: center;">
             <div id="app">
                 <div class="imgcontent">
-                    <img class="penguin imgfn imgtrans" src="./img/動物角色_VR_企鵝.png" alt="">
-                    <img class="turtle imgfn imgtrans" src="./img/動物角色_VR_烏龜.png" alt="">
-                    <img class="imgfns imgfn imgtrans" src="./img/動物角色_VR_鯨魚.png" alt="">
+        
+                    <img class="penguin imgfn imgtrans" src="./img/企鵝.png" alt="">
+                    <img class="turtle imgfn imgtrans" src="./img/烏龜.png" alt="">
+                    <img class="imgfns imgfn imgtrans" src="./img/鯨魚.png" alt="">
 
                 </div>
                 <img id="background" style="position: absolute;display: none;" src="./img/imgs.png" alt="">
